--- a/regress-report.yml
+++ b/regress-report.yml
@@ -10,18 +10,17 @@ test-cases:
 
 bugreports:
   - summary: |
-      При нажатии на кнопку "Оформить заказ", заказ успешно оформляется, но не исчезает из корзины
+      После успешного оформления заказа товары не исчезают из корзины
     environment: |
       Google Chrome 120.0.6099.129 (Официальная сборка), (64 бит)
       ОС MacOS Sonoma 14.2.1 (23C71)
     steps-to-reproduce: |
       1. Рандомно добавить 5 товаров в корзину.
       2. Перейти в корзину.
-      3. Нажать на кнопку "Оформить заказ".
-      4. Появлятся сообщение об успешном оформлении заказа.
-      5. Товары исчезают из корзины.
-      6. Появляются кнопки: "Заказы", "Магазин", "Корзина", "Язык"
+      3. Нажать на кнопку 'Оформить заказ'.
+      4. Появляется сообщение об успешном оформлении заказа.
+      5. Товары исчезают из корзины
     expected-result: |
-      После успешного оформления заказа товары исчезают из корзины
+      После оформления заказа товары исчезают из корзины
     actual-result: |
-      После успешного заказа товаров товары не исчезают из корзины
+      После заказа товары не исчезают из корзины
