--- a/regress-report.yml
+++ b/regress-report.yml
@@ -10,17 +10,17 @@ test-cases:
 
 bugreports:
   - summary: |
-      После успешного оформления заказа товары не исчезают из корзины
+      Товары не исчезают из корзины после оформления заказа
     environment: |
       Google Chrome 120.0.6099.129 (Официальная сборка), (64 бит)
       ОС MacOS Sonoma 14.2.1 (23C71)
     steps-to-reproduce: |
-      1. Рандомно добавить 5 товаров в корзину.
-      2. Перейти в корзину.
-      3. Нажать на кнопку 'Оформить заказ'.
-      4. Появляется сообщение об успешном оформлении заказа.
-      5. Товары исчезают из корзины
+      Рандомно добавить 5 товаров в корзину.
+      Перейти в корзину.
+      Нажать 'Оформить заказ'.
+      Появляется сообщение об успешном оформлении заказа.
+      Товары исчезают из корзины
     expected-result: |
-      После оформления заказа товары исчезают из корзины
+      Товары исчезают из корзины после оформления заказа
     actual-result: |
-      После заказа товары не исчезают из корзины
+      Товары не исчезают из корзины после оформления заказа
