--- a/regress-report.yml
+++ b/regress-report.yml
@@ -7,20 +7,5 @@ test-cases:
   - summary: |
       Отсутствие кнопки "Заказы" в личном кабинете и на главной странице интернет - магазина
     status: fail
-
-bugreports:
-  - summary: |
-      Товары не исчезают из корзины после оформления заказа
-    environment: |
-      Google Chrome 120.0.6099.129 (Официальная сборка), (64 бит)
-      ОС MacOS Sonoma 14.2.1 (23C71)
-    steps-to-reproduce: |
-      Рандомно добавить 5 товаров в корзину.
-      Перейти в корзину.
-      Нажать 'Оформить заказ'.
-      Появляется сообщение об успешном оформлении заказа.
-      Товары исчезают из корзины
-    expected-result: |
-      Товары исчезают из корзины после оформления заказа
-    actual-result: |
-      Товары не исчезают из корзины после оформления заказа
+    
+bugreports: []
