--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,11 +1,24 @@
 ---
 test-cases:
   - summary: |
-      Отсутствие кнопки входа в личный кабинет пользователя на главной странице
+      Отсутствует кнопка входа в личный кабинет пользователя на главной странице
     status: fail
 
   - summary: |
-      Отсутствие кнопки "Заказы" в личном кабинете и на главной странице интернет - магазина
+      Отсутствует кнопка 'Заказы' на главной странице интернет - магазина
     status: fail
     
-bugreports: []
+bugreports:
+  - summary: |
+      Адаптивная верстка не работает на мобильных устройствах
+    environment: |
+      Google Chrome 120.0.6099.129 (Официальная сборка), (arm64)
+      OS MacOS 14.2.1
+    steps-to-reproduce: |
+      1. Открыть главную страницу интернет - магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app.
+      2. Открыть DevTools.
+      3. Сравнить верстку страницы на десктопных и мобильных устройствах
+    expected-result: |
+      На мобильных устройствах присутствует меню боковой навигации слева с категориями товаров 
+    actual-result: |
+      На мобильных устройствах исчезаело меню боковой навигации слева с категориями товаров
