--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Проверка входа пользователя в личный кабинет с существующими логином и паролем
+    Проверка входа пользователя с существующими логином и паролем
   requirement: |
     При верном вводе логине и пароля пользователь должен войти в свой личный кабинет
   prerequisites: |
