--- a/regress-report.yml
+++ b/regress-report.yml
@@ -15,24 +15,24 @@ bugreports:
       Google Chrome 120.0.6099.129 (Официальная сборка), (arm64)
       OS MacOS 14.2.1
     steps-to-reproduce: |
-      1. Открыть главную страницу интернет - магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app.
-      2. Открыть DevTools.
-      3. Сравнить верстку страницы на десктопных и мобильных устройствах
+      - Открыть главную страницу интернет - магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app
+      - Открыть DevTools
+      - Сравнить верстку страницы на десктопных и мобильных устройствах
     expected-result: |
       На мобильных устройствах присутствует меню боковой навигации слева с категориями товаров 
     actual-result: |
       На мобильных устройствах исчезаело меню боковой навигации слева с категориями товаров
 
-        - summary: |
+ - summary: |
       Отсутствует возможность оплаты товаров на сайте интернет - магазина
     environment: |
       Google Chrome 120.0.6099.129 (Официальная сборка), (arm64)
       OS MacOS 14.2.1
     steps-to-reproduce: |
-      1. Открыть главную страницу интернет - магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app.
-      2. Добавить товары в корзину.
-      3. Нажать на кнопку "Оформить заказ".
-      4. Нажать на кнопку "Оплатить заказ"
+      - Открыть главную страницу интернет - магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app
+      - Добавить товары в корзину
+      - Нажать на кнопку "Оформить заказ"
+      - Нажать на кнопку "Оплатить заказ"
     expected-result: |
       После нажатия на кнопку "Оплатить заказ" появляется выбор метода оплаты
     actual-result: |
