--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,35 +1,32 @@
 ---
 - summary: |
-    Проверка входа пользователя с существующими логином и паролем
+    Проверка поиска товара пользователем по ключевому слову
   requirement: |
-    При верном вводе логине и пароля пользователь должен войти в свой личный кабинет
+    Пользователь должен иметь возможность искать товары по ключевому слову или категории 1
   prerequisites: |
-    Открыта главная страница интернет-магазина с входом в личный кабинет со вводом логина и пароля
+    Открыта главная страница интернет-магазина https://hexlet-products-store.vercel.app/
   test-data: |
-    Логин = olgasus Пароль = 123456
+    Ключевое слово в поиске = "Phone"
   steps:
-    - Вводим логин
-    - Вводим пароль
-    - Нажимаем кнопку «Войти»
+    - В строке поиска вводим ключевое слово "Phone"
   expected-result: |
-    Пользователь вошел в личный кабинет с главной страницы
+    Появились товары, которые содержат в себе ключевое слово "Phone"
 
 - summary: |
-    Проверка успешного заказа товаров из интернет - магазина
+    Успешное добавление товаров в корзину и просмотр содержимого корзины
   requirement: |
-    При формировании корзины товаров и нажатии на кнопку 'Checkout' заказ должен быть успешно оформлен
+    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины 4
   prerequisites: |
-    Пользователь вошел в личный кабинет.
-    Открыт каталог товаров
+    Открыта главная страница интернет-магазина https://hexlet-products-store.vercel.app/
   test-data: |
-    Товар = iPhone 9.
-    Товар = Huawei P30.
-    Товар = Orange Essence Food Flavou.
-    Товар = Hyaluronic Acid Serum.
+    Товар = iPhone 9
+    Товар = Huawei P30
+    Товар = Orange Essence Food Flavou
+    Товар = Hyaluronic Acid Serum
     Товар = Microsoft Surface Laptop 4
   steps:
     - Добавляем товары поочередно (для примеры выбраны эти из разных категории товаров), количество каждого товара = 1 шт.
-    - Нажимаем кнопку 'Checkout'.
-    - Появляется сообщение об успешном заказе товаров
+    - Переходим в корзину
   expected-result: |
-    Появляется сообщение об успешном заказе товаров
+    - Товары добавляются в корзину
+    - Можно просматривать содержимое корзины
