lint regress-report.yml

--- a/regress-report.yml
+++ b/regress-report.yml
@@ -3,37 +3,37 @@ test-cases:
   - summary: |
       Отсутствует кнопка входа в личный кабинет пользователя на главной странице
     status: fail
-
   - summary: |
       Отсутствует кнопка 'Заказы' на главной странице интернет - магазина
     status: fail
-    
 bugreports:
   - summary: |
       Адаптивная верстка не работает на мобильных устройствах
     environment: |
       Google Chrome 120.0.6099.129 (Официальная сборка), (arm64)
       OS MacOS 14.2.1
-    steps-to-reproduce: |
-      - Открыть главную страницу интернет - магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app
-      - Открыть DevTools
-      - Сравнить верстку страницы на десктопных и мобильных устройствах
-    expected-result: |
-      На мобильных устройствах присутствует меню боковой навигации слева с категориями товаров 
-    actual-result: |
-      На мобильных устройствах исчезаело меню боковой навигации слева с категориями товаров
+    steps-to-reproduce: >
+      - Открыть главную страницу интернет - магазина
+      https://products-store-git-v2bugfixes-hexlet-components.vercel.app
 
- - summary: |
+      - Открыть DevTools
+
+      - Сравнить верстку страницы на десктопных и мобильных устройствах
+    expected-result: >
+      На мобильных устройствах присутствует меню боковой навигации
+      слева с категориями товаров 
+    actual-result: >
+      На мобильных устройствах исчезаело меню боковой навигации слева с
+      категориями товаров
+  - summary: |
       Отсутствует возможность оплаты товаров на сайте интернет - магазина
     environment: |
       Google Chrome 120.0.6099.129 (Официальная сборка), (arm64)
       OS MacOS 14.2.1
-    steps-to-reproduce: |
-      - Открыть главную страницу интернет - магазина https://products-store-git-v2bugfixes-hexlet-components.vercel.app
+    steps-to-reproduce: >
+      - Открыть главную страницу интернет - магазина
+      https://products-store-git-v2bugfixes-hexlet-components.vercel.app
+
       - Добавить товары в корзину
+
       - Нажать на кнопку "Оформить заказ"
-      - Нажать на кнопку "Оплатить заказ"
-    expected-result: |
-      После нажатия на кнопку "Оплатить заказ" появляется выбор метода оплаты
-    actual-result: |
-      Отсутствует кнопка "Оплатить заказ" 
